k8s_bkp/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dominio-app
spec:
  replicas: 2  # Quantidade de réplicas da aplicação
  selector:
    matchLabels:
      app: dominio-app  # Seleciona pods com essa label
  template:
    metadata:
      labels:
        app: dominio-app  # Associa esse label ao pod criado
    spec:
      containers:
      - name: dominio-app
        image: edsontecno/clean-architecture-nestjs-backend:latest  # Imagem do Node.js 
        ports:
        - containerPort: 3000  # Porta exposta pela aplicação
        resources:
          requests:   # Recursos mínimos para cada pod
            memory: "512Mi"
            cpu: "500m"
          limits:     # Limites máximos para cada pod
            memory: "1024Mi"
            cpu: "1"
