k8s_bkp/ingress-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-app-ingress
spec:
  rules:
  - host: localhost  # Substitua pelo domínio correto: backend.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dominio-app-service  # Conecta ao serviço do backend
            port:
              number: 3001
